--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Build the Docker image
       run: |
-        docker build --build-arg SECRET_KEY=${{secrets.SECRET_KEY}} --build-arg DB_HOST=${{secrets.DB_HOST}} --build-arg DB_USER=${{secrets.DB_USER}} --build-arg DB_PASSWORD=${{secrets.DB_PASSWORD}} --build-arg MONGO_URI=${{secrets.MONGO_URI}} -t tripmate .
+        docker build --build-arg SECRET_KEY=${{secrets.SECRET_KEY}} --build-arg DB_HOST=${{secrets.DB_HOST}} --build-arg DB_USER=${{secrets.DB_USER}} --build-arg DB_PASSWORD=${{secrets.DB_PASSWORD}} -t tripmate .
 
     - name: taging
       run: docker tag tripmate:latest ${{ secrets.DOCKERHUB_USERNAME }}/tripmate:latest
